refactor(LottoGenerator) : 자동, 수동을 LottoGenerator에서 생성하도록 개선